--- a/Certificado Profissional Google Data Analytics/Módulo 6 - Compartilhe dados por meio da arte da visualização .ipynb
+++ b/Certificado Profissional Google Data Analytics/Módulo 6 - Compartilhe dados por meio da arte da visualização .ipynb
@@ -18,23 +18,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9705f210",
+   "id": "83932bf8",
    "metadata": {},
    "source": [
-    "### O que você aprenderá:\n",
-    "* Pensamento de design\n",
-    "* Como os analistas de dados usam visualizações para se comunicar sobre dados\n",
-    "* Os benefícios do Tableau para apresentar as descobertas da análise de dados\n",
-    "* Narrativa baseada em dados\n",
-    "* Painéis e filtros de painel\n",
-    "* Estratégias para criar uma apresentação de dados eficaz\n",
-    "### Conjuntos de habilidades que você construirá:\n",
-    "* Criação de visualizações e painéis no Tableau\n",
-    "* Abordando problemas de acessibilidade ao comunicar sobre dados\n",
-    "* Compreender o propósito de diferentes ferramentas de comunicação empresarial\n",
-    "* Contando uma história baseada em dados\n",
-    "* Apresentar a outras pessoas sobre dados\n",
-    "* Respondendo a perguntas sobre dados"
+    "## Comunicando seus insights de dados <br>\n",
+    "#### As partes interessadas geralmente não têm tempo,acesso a dados ou experiênciaprecisavam encontrar essas histórias por conta própria.É por isso que vamos nos concentrar em visualizardados para ajudá-lo a compartilhar melhor histórias de dados. <br>\n",
+    "#### A visualização de dados é a representação gráfica e apresentação de dados. .Na verdade, trata-se apenas de colocar informações em uma imagem para facilitaroutras pessoas entendam. <br>\n",
+    "#### Uma visualização de dados bem feita tem o poder de mudar a opinião das pessoas.Além disso, pode ajudar alguém que não tenha o mesmo conhecimento técnico ouexperiência enquanto você forma suas próprias opiniões. <br>\n",
+    "#### As visualizações de dados são uma ferramenta útil paraencaixar muita informação em um espaço pequeno. Para fazer isso, primeiro você precisa estruturar e organizar seus pensamentos. Pense nos seus objetivos e as conclusões a que você chegou após classificar os dados. Identificar os principais elementos de suas descobertas ajuda a preparar o terreno paracomo você deve organizar sua apresentação. <br>"
    ]
   }
  ],
