--- a/Data Analyst Training - Projetos de Analista de Dados.ipynb
+++ b/Data Analyst Training - Projetos de Analista de Dados.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "# **<u>Sumário:</u>**\n",
     "1. [Por que usar uma estrutura de projeto?](#Por-que-usar-uma-estrutura-de-projeto?)\n",
-    "2. [Tipos de Projetos](#Tipos-de-Projetos)\n",
+    "2. [Tipos de Projetos (Melhorar este item)](#Tipos-de-Projetos)\n",
     "3. [Estrutura do Projeto no GitHub](#Estrutura-do-Projeto-no-GitHub)\n",
     "4. [Erros de um projeto](#Erros-de-um-projeto)\n",
     "4. [Etapas da elaboração dos projetos para portifólio](#Etapas-da-elaboração-dos-projetos-para-portifólio)"
@@ -146,6 +146,44 @@
     "Análise de Sentimento da Vacina Covid-19\n",
     "Análise de coorte\n",
     "> https://amankharwal.medium.com/data-analysis-projects-with-python-a262a6f9e68c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cecda65",
+   "metadata": {},
+   "source": [
+    "# Lista de tutoriais de projetos de análise de dados: <br>\n",
+    "\n",
+    "1 - Guia passo a passo do banco de dados SQL para o painel interativo\n",
+    "> https://www.youtube.com/watch?v=0rB_memC-dA&ab_channel=AdamFiner-LearnBIOnline\n",
+    "\n",
+    "2 - Análise exploratória de dados com Pandas Python\n",
+    "> https://www.youtube.com/watch?v=xi0vhXFPegw\n",
+    "\n",
+    "3 - Projeto de portfólio de analista de dados com Tableau\n",
+    "> https://www.youtube.com/watch?v=nl9eZl1IOKI&ab_channel=DataWithMo\n",
+    "\n",
+    "4 - Projeto de Portfólio SQL e PowerBI para Analistas de Dados\n",
+    "> https://www.youtube.com/watch?v=PzyZI9uLXvY&ab_channel=HerDataProject\n",
+    "\n",
+    "5 - Painel Netflix com Tableau\n",
+    "> https://www.youtube.com/watch?v=BTArwS4ljC4&ab_channel=DataScienceRoadMap\n",
+    "\n",
+    "6 - Amazon Sales Painel com Tableau\n",
+    "> https://www.youtube.com/watch?v=N12eyBBvGb8&ab_channel=DataScienceRoadMap\n",
+    "\n",
+    "7 - Projeto de Power BI de ponta a ponta\n",
+    "> https://www.youtube.com/watch?v=j4xlVLgsmNQ&ab_channel=RishabhMishra\n",
+    "\n",
+    "8 - Análise de dados de companhias aéreas usando SQL e Python \n",
+    "> https://www.youtube.com/watch?v=LcMjsqZiSjY&ab_channel=TechClasses\n",
+    "\n",
+    "9 - Painel do Tripadvisor com Tableau\n",
+    "> https://www.youtube.com/watch?v=jL355VVdY9o&ab_channel=DataScienceRoadMap\n",
+    "\n",
+    "10 - Painel de análise de RH com Tableau e Power BI\n",
+    "> https://www.youtube.com/watch?v=4l7GgWmaTGc&ab_channel=DataTutorials"
    ]
   },
   {
