--- a/Data Analyst Training - Roadmap de Analista de Dados.ipynb
+++ b/Data Analyst Training - Roadmap de Analista de Dados.ipynb
@@ -22,12 +22,13 @@
    "metadata": {},
    "source": [
     "# **<u>Sumário:</u>**\n",
-    "1. [O que é análise de dados](#O-que-é-análise-de-dados)\n",
+    "1. [O que é análise de dados?](#O-que-é-análise-de-dados?)\n",
     "2. [O que faz um analista](#O-que-faz-um-analista:)\n",
     "    * Algumas atribuições\n",
     "    * Soft Skills\n",
     "    * Hard Skills\n",
-    "3. [Método cíclico](#Método-cíclico:)\n",
+    "3. [Roteiro (Melhororar este item)](#Roteiro:)\n",
+    "4. [Método cíclico](#Método-cíclico:)\n",
     "    * Etapa 1 - Problema de negócio / Declaração do problema\n",
     "    * Etapa 2 - Definição da Baseline\n",
     "    * Etapa 3 - Planejamento\n",
@@ -37,10 +38,10 @@
     "    * Etapa 7 - Preparação dos Dados (Modelagem dos dados)\n",
     "    * Etapa 8 - (Pré) Validação dos resultados com os clientes\n",
     "    * Etapa 9 - Storytelling dos processos e resultados\n",
-    "4. [Qualidade dos Dados](#Qualidade-dos-Dados:)\n",
+    "5. [Qualidade dos Dados](#Qualidade-dos-Dados:)\n",
     "    * Características dos dados de qualidade\n",
     "    * Práticas recomendadas para garantir qualidade\n",
-    "5. [Técnicas de Limpeza](#Técnicas-de-Limpeza:)\n",
+    "6. [Técnicas de Limpeza](#Técnicas-de-Limpeza:)\n",
     "    * 1 - Limpe observações indesejadas\n",
     "    * 2 - Correção de inconsistências ou imprecisos\n",
     "    * 3 - Padronizar os dados \n",
@@ -49,7 +50,7 @@
     "    * 6 - Erros de conversão e sintaxe de tipo\n",
     "    * 7 - Lidar com dados ausentes\n",
     "    * 8 - Validar o conjunto de dados\n",
-    "6. [Técnicas de Imputação de Dados Ausentes](#Técnicas-de-Imputação-de-Dados-Ausentes:)\n",
+    "7. [Técnicas de Imputação de Dados Ausentes](#Técnicas-de-Imputação-de-Dados-Ausentes:)\n",
     "    * 1 - Exclusão de lista ou análise de caso completo (ou caso disponível)\n",
     "    * 2 - Exclusão de pares\n",
     "    * 3 - Eliminando variáveis\n",
@@ -65,13 +66,13 @@
     "    * 13 - Imputação de Amostra Aleatória\n",
     "    * 14 - Imputação Múltipla\n",
     "    * 15 - Modelos preditivos / Estatísticos que imputam os dados ausentes\n",
-    "7. [Principais Benefícios da Limpeza de Dados](#Principais-Benefícios-da-Limpeza-de-Dados:)\n",
-    "8. [Tipos de Análises](#Tipos-de-Análises:)\n",
+    "8. [Principais Benefícios da Limpeza de Dados](#Principais-Benefícios-da-Limpeza-de-Dados:)\n",
+    "9. [Tipos de Análises](#Tipos-de-Análises:)\n",
     "    * 1 - Análise Descritiva\n",
     "    * 2 - Análise Diagnóstica\n",
     "    * 3 - Análise Preditiva\n",
     "    * 4 - Análise Prescritiva\n",
-    "9. [Análise Exploratória de Dados (EDA)](#Análise-Exploratória-de-Dados-(EDA):)\n",
+    "10. [Análise Exploratória de Dados (EDA)](#Análise-Exploratória-de-Dados-(EDA):)\n",
     "    * Etapas: \n",
     "        * 1 - Obter os dados (Seleção de dados)\n",
     "        * 2 - Verificar a integridade dos dados\n",
@@ -95,7 +96,8 @@
     "        * 12 - Análise de Coorte\n",
     "        * 13 - Análise de Sentimentos\n",
     "        * 14 - Simulação ou método de Monte Carlo \n",
-    "10. [Principais Benefícios da EDA](#Principais-Benefícios-da-EDA:)"
+    "11. [Principais Benefícios da EDA](#Principais-Benefícios-da-EDA:)\n",
+    "12. [Perguntas gerais de entrevista](#Perguntas-gerais-de-entrevista)"
    ]
   },
   {
@@ -103,7 +105,7 @@
    "id": "25dbd3cb",
    "metadata": {},
    "source": [
-    "# O que é análise de dados\n",
+    "# O que é análise de dados?\n",
     "[&#x1F53C;](#Sumário:) Clique para voltar para o sumário"
    ]
   },
@@ -210,6 +212,107 @@
     "<br>\n",
     "\n",
     "<center><img width=\"40%\" src=\"_imagens/Analista de dados.jpg\"></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "428e1a9a",
+   "metadata": {},
+   "source": [
+    "# Roteiro:\n",
+    "[&#x1F53C;](#Sumário:) Clique para voltar para o sumário"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "433851fa",
+   "metadata": {},
+   "source": [
+    "1 - Introdução à Análise de Dados: Visão geral da análise de dados e seu papel na tomada de decisões de negócios.\n",
+    "> https://www.youtube.com/watch?v=zwasdVPPFFw&feature=youtu.be&ab_channel=Simplilearn\n",
+    "\n",
+    "2 - Excel para análise de dados: usando o Excel para manipulação, análise e visualização de dados.\n",
+    "> https://www.youtube.com/watch?v=OOWAk2aLEfk&feature=youtu.be\n",
+    "\n",
+    "3 - SQL para análise de dados: Noções básicas de SQL, consulta de bancos de dados e junção de tabelas.\n",
+    "> https://www.youtube.com/live/YvaddgkneEg?feature=share\n",
+    "\n",
+    "4 - Visualização de dados: criação de tabelas e gráficos para comunicar insights de dados de forma eficaz.\n",
+    "> https://www.youtube.com/watch?v=GPVsHOlRBBI&feature=youtu.be&ab_channel=freeCodeCamp.org\n",
+    "\n",
+    "5 - Limpeza e preparação de dados: Limpeza e preparação de dados para análise, lidando com dados ausentes e discrepantes.\n",
+    "> https://www.youtube.com/playlist?list=PLJ39kWiJXSiwksZX7M3f4uHM9_vQAzhL0\n",
+    "\n",
+    "6 - Análise Exploratória de Dados: Estatística descritiva, distribuições de dados e técnicas de exploração de dados.\n",
+    "> https://www.youtube.com/watch?v=-o3AxdVcUtQ&feature=youtu.be&ab_channel=edureka%21\n",
+    "\n",
+    "7 - Técnicas de Análise de Dados: Teste de hipóteses, análise de regressão e previsão.\n",
+    "> https://www.youtube.com/watch?v=U5vt3_dfKys&feature=youtu.be&ab_channel=edureka%21\n",
+    "\n",
+    "8 - Aprendizado de máquina: introdução aos conceitos, algoritmos e aplicativos de aprendizado de máquina.\n",
+    "> https://www.youtube.com/watch?v=GwIo3gDZCVQ&feature=youtu.be&ab_channel=edureka%21\n",
+    "\n",
+    "9 - Data Storytelling: Criando histórias convincentes usando visualização de dados e técnicas narrativas.\n",
+    "> https://www.youtube.com/watch?v=oazk2VxqOPk&feature=youtu.be\n",
+    "\n",
+    "10 - Gerenciamento de dados: Gerenciamento de dados usando sistemas de gerenciamento de banco de dados (DBMS) e tecnologias de big data.\n",
+    "> https://www.youtube.com/playlist?list=PLBlnK6fEyqRi_CUQ-FXxgzKQ1dwr_ZJWZ\n",
+    "\n",
+    "11 - Business Intelligence: Utilização de ferramentas de BI para criação de dashboards e relatórios para a tomada de decisões de negócios.\n",
+    "> https://www.youtube.com/watch?v=Hg8zBJ1DhLQ&ab_channel=Simplilearn\n",
+    "\n",
+    "12 - Ética de Dados: Compreender considerações éticas na análise de dados e garantir privacidade e segurança.\n",
+    "> https://www.youtube.com/watch?v=jcTj6FgWOpo&feature=youtu.be&ab_channel=freeCodeCamp.org\n",
+    "\n",
+    "13 - Ferramentas de ciência de dados: introdução ao Python, R e outras ferramentas de ciência de dados para análise de dados.\n",
+    "> https://www.youtube.com/watch?v=r-uOLxNrNk8&feature=youtu.be&ab_channel=freeCodeCamp.org\n",
+    "\n",
+    "14 - Análise Avançada de Dados: Técnicas estatísticas avançadas, modelagem preditiva e otimização.\n",
+    "> https://www.youtube.com/watch?v=Lv0xcdeXaGU&feature=youtu.be&ab_channel=Simplilearn\n",
+    "\n",
+    "15 - Projetos de análise de dados: Projetos práticos de análise de dados para praticar habilidades e aplicar conhecimento.\n",
+    "> https://www.youtube.com/watch?v=G9NmACvXh8w&feature=youtu.be&ab_channel=Simplilearn\n",
+    "\n",
+    "16 - Perguntas e respostas da entrevista do analista de dados\n",
+    "> https://www.youtube.com/watch?v=Y6175TGFuMI&feature=youtu.be\n",
+    "\n",
+    "17 - 100 dias de análise de dados : um guia completo \n",
+    "> https://medium.com/@brittanycity/100-days-of-data-analytics-a-complete-guide-d278ac34655b\n",
+    "\n",
+    "18 - Cursos Udacity GRATUITOS sobre Análise de Dados, SQL e Visualização de Dados: \n",
+    "> https://www.mltut.com/free-udacity-courses-on-data-analytics/\n",
+    "\n",
+    "19 - Introdução à análise de dados: o “Método Google” \n",
+    "> https://towardsdatascience.com/intro-to-data-analytics-the-google-method-92d431b65581\n",
+    "\n",
+    "20 - Guia essencial de um cientista de dados para análise exploratória de dados\n",
+    "> https://towardsdatascience.com/a-data-scientists-essential-guide-to-exploratory-data-analysis-25637eee0cf6\n",
+    "\n",
+    "21 - Revolucionando a análise de dados com PandasGUI \n",
+    "> https://www.kdnuggets.com/2023/06/revolutionizing-data-analysis-pandasgui.html\n",
+    "\n",
+    "22 - Carreira em Data Analytics da DIO: \n",
+    "> https://digitalinnovationone.github.io/roadmaps/careers/data-analytics/ <br>\n",
+    "\n",
+    "* Excel: https://support.microsoft.com/en-us/excel\n",
+    "* Estatística e Matemática Básica (Livro Estatística: O que é, para que serve, como funciona por Charles Wheelan)\n",
+    "* Formação SQL Database Specialist\n",
+    "* Formação NoSQL Specialist\n",
+    "* Formação Power BI Analyst\n",
+    "* Formação Python Developer\n",
+    "* Curso Introdução a Ciência de Dados (Livro Data Science do Zero por Joel Grus - O'Reilly e Livro Estatística para Cientista de Dados por Andrew Bruce - O'Reilly)\n",
+    "* Formação R Developer (Livro Python e R Para o Cientista de Dados Moderno: o Melhor de Dois Mundos por Boyan Angelov - O'Reilly)\n",
+    "* Cloud Specialist (Livro Um guia prático para migração para nuvem por Kieran Broadfoot - O'Reilly)\n",
+    "    * Google Cloud Platform (GCP)\n",
+    "    * Microsoft Azure\n",
+    "    * Amazon Web Services\n",
+    "* Formação Machine Learning Specialist\n",
+    "    * Livro Análise Prática de Séries Temporais: Predição com Estatística e Aprendizado de Máquina por Aileen Nielsen - O'Reilly\n",
+    "    * Livro Designing Machine Learning Systems: An Iterative Process for Production-Ready Applications por Chip Huyen - O'Reilly\n",
+    "    * Livro Machine Learning Design Patterns: Solutions to Common Challenges in Data Preparation, Model Building, and Mlops por Valliappa Lakshmanan - O'Reilly\n",
+    "* Formação Spark Big Data Specialist\n",
+    "    * Livro Big data para leigos por Alan Nugent\n",
+    "    * Livro Big Data Now: Current Perspectives from O'Reilly Radar por O'Reilly Radar Team"
    ]
   },
   {
@@ -783,7 +886,62 @@
    "id": "10efb7a9",
    "metadata": {},
    "source": [
-    "# Versão 1.1 (30/03/2023)"
+    "# Perguntas gerais de entrevista\n",
+    "[&#x1F53C;](#Sumário:) Clique para voltar para o sumário"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "292114d5",
+   "metadata": {},
+   "source": [
+    "#### 1. Mention the differences between Data Mining and Data Profiling?\n",
+    "* Data Mining:\n",
+    "    * Data mining is the process of discovering relevant information that has not yet been identified before.\n",
+    "    * In data mining, raw data is converted into valuable information.\n",
+    "* Data Profiting: \n",
+    "    * Data profiling is done to evaluate a dataset for its uniqueness, logic, and consistency.\n",
+    "    * It cannot identify inaccurate or incorrect data values.\n",
+    "\n",
+    "#### 2. Define the term 'Data Wrangling in Data Analytics.\n",
+    "Data Wrangling is the process wherein raw data is cleaned, structured, and enriched into a desired usable format for better decision making. It involves discovering, structuring, cleaning, enriching, validating, and analyzing data. This process can turn and map out large amounts of data extracted from various sources into a more useful format. Techniques such as merging, grouping, concatenating, joining, and sorting are used to analyze the data. Thereafter it gets ready to be used with another dataset.\n",
+    "\n",
+    "#### 3. What are the various steps involved in any analytics project?\n",
+    "This is one of the most basic data analyst interview questions. The various steps involved in any common analytics projects are as follows:\n",
+    "* Understanding the Problem: Understand the business problem, define the organizational goals, and plan for a lucrative solution.\n",
+    "* Collecting Data: Gather the right data from various sources and other information based on your priorities.\n",
+    "* Cleaning Data: Clean the data to remove unwanted, redundant, and missing values, and make it ready for analysis.\n",
+    "* Exploring and Analyzing Data: Use data visualization and business intelligence tools, data mining techniques, and predictive modeling to analyze data.\n",
+    "* Interpreting the Results: Interpret the results to find out hidden patterns, future trends, and gain insights.\n",
+    "\n",
+    "#### 4. What are the common problems that data analysts encounter during analysis?\n",
+    "The common problems steps involved in any analytics project are:\n",
+    "* Handling duplicate \n",
+    "* Collecting the meaningful right data and the right time\n",
+    "* Handling data purging and storage problems\n",
+    "* Making data secure and dealing with compliance issues\n",
+    "\n",
+    "#### 5. Which are the technical tools that you have used for analysis and presentation purposes?\n",
+    "As a data analyst, you are expected to know the tools mentioned below for analysis and presentation purposes. Some of the popular tools you should know are:\n",
+    "* MS SQL Server, MySQL: For working with data stored in relational databases\n",
+    "* MS Excel, Tableau: For creating reports and dashboards\n",
+    "* Python, R, SPSS: For statistical analysis, data modeling, and exploratory analysis\n",
+    "* MS PowerPoint: For presentation, displaying the final results and important conclusions \n",
+    "\n",
+    "#### 6. What are the best methods for data cleaning?\n",
+    "* Create a data cleaning plan by understanding where the common errors take place and keep all the communications open.\n",
+    "* Before working with the data, identify and remove the duplicates. This will lead to an easy and effective data analysis process.\n",
+    "* Focus on the accuracy of the data. Set cross-field validation, maintain the value types of data, and provide mandatory constraints.\n",
+    "* Normalize the data at the entry point so that it is less chaotic. You will be able to ensure that all information is standardized, leading to fewer errors on entry.\n",
+    "\n",
+    "#### 7. What is the significance of Exploratory Data Analysis (EDA)?\n",
+    "* Exploratory data analysis (EDA) helps to understand the data better.\n",
+    "* It helps you obtain confidence in your data to a point where you’re ready to engage a machine learning algorithm.\n",
+    "* It allows you to refine your selection of feature variables that will be used later for model building.\n",
+    "* You can discover hidden trends and insights from the data.\n",
+    "\n",
+    "https://www.simplilearn.com/tutorials/data-analytics-tutorial/data-analyst-interview-questions <br>\n",
+    "https://www.odinschool.com/blog/big-data/top-20-questions-asked-during-an-interview-for-a-data-analyst-position?affiliate_id=1030#a_aid=1030&a_bid=3f527bcc"
    ]
   }
  ],
