--- a/Data Analyst Training - Roadmap de Analista de Dados.ipynb
+++ b/Data Analyst Training - Roadmap de Analista de Dados.ipynb
@@ -171,6 +171,22 @@
     "\n",
     "<br>\n",
     "\n",
+    "Exemplo de um dia a dia:\n",
+    "1. Ter uma reunião de definição de escopo com as partes interessadas.\n",
+    "2. Criar uma lista clara de requisitos e alinha-los com seus usuários de negócios (Ordem > Recursos > Comentários > Prioridade)\n",
+    "3. Criar uma prévia em PowerPoint ou em outra ferramenta para receber feedback das partes interessadas.\n",
+    "4. Não comentar/definir um prazo antes de verificar a qualidade dos dados.\n",
+    "5. Projeto: Passo 1 - Preparar o documento de Teste de aceitação do usuário - UAT (Ordem > UAT > Teste da equipe DAT > Teste do usuário > Comentários)\n",
+    "6. Projeto: Passo 2 - Evitar ficar alterando o escopo definido inicialmente.\n",
+    "7. Projeto: Passo 3 - Realizar reuniões regulares garantirão que estão no caminho certo e as expectativas dos usuários estão sendo atendidas.\n",
+    "8. Projeto: Passo 4 - Lançar um produto mínimo viável (PMV) para receber feedback de alguns pessoas. \n",
+    "9. Realizar uma demonstração e/ou treinamento do projeto para os usuários finais.\n",
+    "10. Agendar frequentemente reuniões com os grupos de usuários para garantir a adoção ao projeto.\n",
+    "11. Receber feedback incremental e criar um pipeline para a próxima lista de recursos no projeto.\n",
+    "12. Criar um plano de contigência para evitar um impacto crítico/minimizar os riscos do projeto.\n",
+    "\n",
+    "<br>\n",
+    "\n",
     "### **<u>Soft Skills:</u>** \n",
     "* Habilidade de comunicação, colaboração e apresentação\n",
     "* Solução de problemas\n",
