--- a/Santander Bootcamp 2023/Power BI/Visualização e Análise de Dados com Power BI.ipynb
+++ b/Santander Bootcamp 2023/Power BI/Visualização e Análise de Dados com Power BI.ipynb
@@ -147,7 +147,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ccff7583",
    "metadata": {},
@@ -271,7 +270,103 @@
     "* Dados em cache temporário\n",
     "* Com as capacidades de streaming em tempo real do Power BI, você pode transmitir dados e atualizar dashboards assim que os dados forem registrados.\n",
     "* Exemplo: No hub IoT, você pode usar um trabalho de insight de streaming para agregar os dados, o que significa que ele limpará os dados e apagará as mensagens com ruído. Em seguida, você pode recuperar os dados no Power BI como um conjunto de dados de streaming, no qual você pode consumir as informações e criar os visuais pertinentes.\n",
-    "Iot Hub > Azure Stream Analytics > Power BI"
+    "Iot Hub > Azure Stream Analytics > Power BI\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Coleta e Extração de Dados com Power BI <br>\n",
+    "* Coletando de fontes distintas e heterogêneas\n",
+    "* Power Query: \n",
+    "    * Organização dos Dados\n",
+    "        * Manipular dados \n",
+    "        * Remover erros\n",
+    "        * Combinar resultados\n",
+    "    * Ficheiros\n",
+    "        * csv\n",
+    "        * txt\n",
+    "        * excel\n",
+    "    * De onde vem?\n",
+    "        * Local\n",
+    "        * Onedrive (pessoal ou empresa)\n",
+    "        * Sharepoint\n",
+    "        * Banco de Dados \n",
+    "        * Sistemas, APIs, ….\n",
+    "* Fluxo de Dados\n",
+    "<img width=\"50%\" src=\"_imagens/Fluxo de dados.png\">\n",
+    "* Dataset de origem\n",
+    "    * Mudança durante projeto\n",
+    "    * Atualização do local do database (Transformar dados > Definição deorigem > Alterar origem)\n",
+    "OBS: Esta ação é muitas vezes necessária devido à política de segurança da organização. Por exemplo, quando a palavra-passe precisa de ser atualizada a cada 90 dias. Pode alterar a origem de dados, editar permissões ou limpar permissões.\n",
+    "* Quando utilizar SQL?\n",
+    "    * Seleção de dados da base\n",
+    "    * Carregamento parcial\n",
+    "    * Junção de tabelas\n",
+    "* E base NoSQL? (Obter dados > Mais > Azure > Azure Cosmos DB)\n",
+    "    * Document model\n",
+    "    * JSON\n",
+    "    * SQL Flavor\n",
+    "OBS: Apesar do power BI conseguir interpretar os dados em JSON e converter para tabular, é preciso normalizar os dados antes de gerar relatórios. Os dados aparecem como registros e realizar a edição no powerbi.\n",
+    "* Armazenamento de dados (Facilidade x Disponibilidade: Acesso aos dados, Tempo de carregamento e Permissão de acesso)\n",
+    "    * Importar \n",
+    "    * DirectQuery\n",
+    "    * Composto\n",
+    "* Lidando com Problemas de Desempenho\n",
+    "    * Problemas:\n",
+    "        * Gargalo de acesso\n",
+    "        * Tempo de execução\n",
+    "        * Lentidão no carregamento\n",
+    "        * Erros de importação\n",
+    "        * Falhas do disco, server e outros\n",
+    "    * O que pode ser feito? \n",
+    "        * Dobragem de Consultas\n",
+    "            * Aumento de desempenho\n",
+    "            * Transformações controladas pela tool\n",
+    "            * Execução no servidor (SQL)\n",
+    "            * Mais eficiência em atualizações de dados\n",
+    "            * Compatibilidade automática com modos de armazenamento\n",
+    "        * Performance\n",
+    "            * Processar dados na origem\n",
+    "            * Utilizar SQL nativo\n",
+    "            * Separar data e a hora do mesmo campo\n",
+    "            * Manter a base a ser utilizada\n",
+    "OBS: Dobragem de Consultas: \"O motivo para a implementação deste processo é garantir que estas transformações possam acontecer no servidor de origem de dados original sem sobrecarregar os recursos de computação do Power BI.\"\n",
+    "* Problemas de Importação de Dados\n",
+    "    * Erros possíveis\n",
+    "        * Importação de diversas fontes\n",
+    "        * Mensagens peculiares (Tempo de limite expirou, Falha no arquivo e Erro de tipo de dados: Colunas em branco, Erro de interpretação e Resolução centrada nos dados)\n",
+    "        * Falhas de hardware e software\n",
+    "        * Falta de conformidade dos dados\n",
+    "OBS: “Se você precisar das linhas, das colunas e da complexidade, considere obter pequenas partes de dados e, em seguida, juntá-las novamente usando o Power Query.”\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Limpeza e Transformação de Dados com Power BI <br>\n",
+    "* Status – tipo numérico  \n",
+    "* Erros nas colunas\n",
+    "* Valores nulos\n",
+    "* Duplicações de IDs\n",
+    "* Coluna complexa - endereço\n",
+    "\n",
+    "* Problemas:\n",
+    "    * Dados inválidos\n",
+    "    * Resultados incorretos\n",
+    "    * Relatórios equivocados\n",
+    "    * Más decisões\n",
+    "\n",
+    "* Dados Limpos\n",
+    "    * Resultados precisos quando fazem agregações e cálculos. \n",
+    "    * As tabelas são organizadas\n",
+    "    * As duplicatas são removidas\n",
+    "    * Divisão de uma coluna complicada em duas colunas mais simples. \n",
+    "    * Combinação de colunas para facilitar a leitura. \n",
+    "    * Códigos e inteiros podem ser substituídos por valores legíveis por humanos.\n",
+    "    * Como resolver inconsistências?\n",
+    "    * Como substituir valores\n",
+    "    * Analisar dados das colunas\n",
+    "    * Transformar dados das colunas\n",
+    "    * Combinar consultas\n",
+    "    * Aplicar nomenclaturas\n",
+    "    * Entender Código M"
    ]
   }
  ],
